# tap-plytix

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  meltano.yml  pyproject.toml
tap_plytix/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
