[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tap-plytix"
dynamic = ["version"]
description = "Singer tap for Plytix, built with Hotglue's hotglue_singer_sdk."
readme = "README.md"
authors = [{ name = "Hotglue"}]
keywords = [
    "ELT",
    "Plytix",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "hotglue-singer-sdk>=1.0.26",
    "requests~=2.33.0",
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.1.0",
]

[project.scripts]
# CLI declaration
tap-plytix = 'tap_plytix.tap:TapPlytix.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=9",
    "hotglue-singer-sdk",
]
typing = [
    "mypy>=1.19.1",
    "ty>=0.0.18",
    "types-requests",
]



[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
    "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

# This configuration can be used to customize tox environments
[tool.tox]
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "lint",
    "typing",
    "3.10",
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-runner"
pass_env = [
    "TAP_PLYTIX_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.lint]
description = "run ruff linter and formatter check"
skip_install = true
dependency_groups = []
deps = ["ruff>=0.15"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."],
]

[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_plytix", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_plytix", "tests" ], extend = true } ],
]
