[tool.poetry]
name = "tap-plytix"
version = "0.0.1"
description = "`tap-plytix` is a Singer tap for Plytix, built with Hotglue's hotglue_singer_sdk."
authors = ["Hotglue"]
keywords = [
    "ELT",
    "Plytix",
]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.33.0"
hotglue-singer-sdk = "^1.0.26"
typing-extensions = { version = ">=4.5.0", python = "<3.13" }
s3fs = { version = ">=2026.1.0", optional = true }

[tool.poetry.extras]
s3 = ["s3fs"]

[tool.poetry.dev-dependencies]
pytest = "^9"
mypy = "^1.19.1"
ty = "^0.0.18"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-plytix = "tap_plytix.tap:TapPlytix.cli"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.pytest]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
    "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

[tool.tox]
requires = [
    "tox>=4.43",
    "tox-uv",
]
env_list = [
    "lint",
    "typing",
    "3.10",
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-runner"
pass_env = [
    "TAP_PLYTIX_*",
]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.lint]
description = "run ruff linter and formatter check"
skip_install = true
dependency_groups = []
deps = ["ruff>=0.15"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."],
]

[tool.tox.env.typing]
description = "type checks"
deps = [
    "-e .",
    "mypy>=1.19.1",
    "ty>=0.0.18",
    "types-requests",
]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_plytix", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_plytix", "tests" ], extend = true } ],
]
